# libGPUCounters

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  cpu_profiler.h  gpu_profiler.h  hwc.hpp  hwc_names.hpp  hwcpipe.cpp  hwcpipe.h  hwcpipe_log.h  instrument.h  instruments_stats.cpp  instruments_stats.h  logger.cpp  logger.h  logging.cpp  logging.h  mali_counter.cpp  mali_counter.h  measurement.h  pmu.cpp  pmu.h  pmu_counter.cpp  pmu_counter.h  run_clang_format.sh  third_party_licenses.txt  value.h
.github/workflows/: android-clang.yaml  build.yml  linux-clang.yaml  linux-gcc.yaml
backend/: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md
backend/device/: CMakeLists.txt  README.md
backend/device/include/device/: api.hpp  constants.hpp  handle.hpp  instance.hpp  product_id.hpp
backend/device/include/device/hwcnt/: block_extents.hpp  block_iterator.hpp  block_metadata.hpp  blocks_view.hpp  clock_extents.hpp  features.hpp  prfcnt_set.hpp  reader.hpp  sample.hpp
backend/device/include/device/hwcnt/detail/: handle.hpp
backend/device/include/device/hwcnt/sampler/: configuration.hpp  manual.hpp  periodic.hpp
backend/device/include/device/hwcnt/sampler/detail/: backend.hpp
backend/device/src/device/: handle.cpp  handle_impl.hpp  instance.cpp  instance_impl.hpp  kbase_version.hpp  num_exec_engines.cpp  num_exec_engines.hpp  product_id.cpp  shader_core_bitset.hpp
backend/device/src/device/detail/: cast_to_impl.hpp  enum_operators.hpp  is_empty_class.hpp
backend/device/src/device/hwcnt/: backend_type.cpp  backend_type.hpp  reader.cpp
backend/device/src/device/hwcnt/sampler/: discard_impl.hpp  filefd_guard.hpp  filter_block_extents.hpp  mapped_memory.hpp  poll.hpp  queue.hpp  timestamp.hpp
backend/device/src/device/hwcnt/sampler/base/: backend.hpp  backend_args.hpp
backend/device/src/device/hwcnt/sampler/detail/: backend.cpp
backend/device/src/device/hwcnt/sampler/kinstr_prfcnt/: backend.hpp  backend_args.hpp  backend_wa.hpp  block_index_remap.cpp  block_index_remap.hpp  construct_block_extents.hpp  construct_clock_extents.hpp  convert.hpp  enum_info.hpp  enum_info_parser.cpp  enum_info_parser.hpp  metadata_parser.cpp  metadata_parser.hpp  parse_all.hpp  setup.hpp
backend/device/src/device/hwcnt/sampler/vinstr/: backend.hpp  backend_args.hpp  construct_block_extents.hpp  convert.hpp  sample_layout.hpp  session.hpp  setup.hpp
backend/device/src/device/ioctl/: offset_pointer.hpp  pointer64.hpp  strided_array_iterator.hpp  strided_array_view.hpp
backend/device/src/device/ioctl/kbase/: commands.hpp  compare.hpp  compare_manual.hpp  print.hpp  types.hpp
backend/device/src/device/ioctl/kbase_pre_r21/: commands.hpp  compare.hpp  compare_manual.hpp  print.hpp  print_manual.hpp  types.hpp
backend/device/src/device/ioctl/kinstr_prfcnt/: commands.hpp  compare.hpp  compare_manual.hpp  print.hpp  print_manual.hpp  types.hpp
backend/device/src/device/ioctl/vinstr/: commands.hpp  compare.hpp  print.hpp  types.hpp
backend/device/src/device/syscall/: iface.hpp
backend/device/src/device/syscall/funcs/: libmali.hpp  unix.hpp
cmake/toolchains/: aarch64-android-clang.toolchain.cmake  arm-android-clang.toolchain.cmake
cmake/toolchains/lib/: android.toolchain.cmake
docs/: gpu_template.html  index.html  index_template.html  mali-g310_counter_reference.html  mali-g31_counter_reference.html  mali-g510_counter_reference.html  mali-g51_counter_reference.html  mali-g52_counter_reference.html  mali-g57_counter_reference.html  mali-g610_counter_reference.html  mali-g615_counter_reference.html  mali-g620_counter_reference.html  mali-g625_counter_reference.html  mali-g68_counter_reference.html  mali-g710_counter_reference.html  mali-g715_counter_reference.html  mali-g71_counter_reference.html  mali-g720_counter_reference.html  mali-g725_counter_reference.html  mali-g72_counter_reference.html  mali-g76_counter_reference.html  mali-g77_counter_reference.html  mali-g78_counter_reference.html  mali_g1_counter_reference.html
docs/css/: document.css  lato-font.css
docs/js/: document.js
docs/licenses/: license-fontawesome-free.txt  license-lato.txt
examples/: CMakeLists.txt  api_example.cpp
hwcpipe/: CMakeLists.txt
hwcpipe/include/hwcpipe/: counter_database.hpp  error.hpp  gpu.hpp  hwcpipe.hpp  hwcpipe_counter.h  sampler.hpp  types.hpp
hwcpipe/include/hwcpipe/detail/: assert.hpp  counter_database.hpp  internal_types.hpp
hwcpipe/src/: error.cpp
hwcpipe/src/hwcpipe/: all_gpu_counters.cpp  all_gpu_counters.hpp  counter_metadata.cpp  counter_metadata.hpp  derived_functions.cpp  derived_functions.hpp
hwcpipe/src/hwcpipe/detail/: counter_database.cpp
jenkins/: Dockerfile  Jenkinsfile  dockerimage.Jenkinsfile
misc/gator-counter-definitions/: MaliHwCntrNames.h  README.md  events-Mali-G31_hw.xml  events-Mali-G51_hw.xml  events-Mali-G52_hw.xml  events-Mali-G57_hw.xml  events-Mali-G68_hw.xml  events-Mali-G71_hw.xml  events-Mali-G72_hw.xml  events-Mali-G76_hw.xml  events-Mali-G77_hw.xml  events-Mali-G78_hw.xml  events-Mali-T72x_hw.xml  events-Mali-T76x_hw.xml  events-Mali-T82x_hw.xml  events-Mali-T83x_hw.xml  events-Mali-T86x_hw.xml  events-Mali-T88x_hw.xml
specification/: .mypy.ini  .pycodestyle.ini  .pylintrc  README.md  lgcpy_export_docs_github.py  lgcpy_lint.sh  lgcpy_test.sh  lgcpy_validate.py  requirements.txt
specification/database/: Mali-ArchitectureInfo.xml  Mali-ProductInfo.xml  Mali-SemanticGroupInfo.xml  Mali-SemanticLayout.yaml  Mali-SemanticSectionInfo.xml
specification/database/hardwarelayout/: Mali G1.xml  (+12 more)
specification/documentation/: counter_guide.md  terminology_guide.md  user_guide.md
specification/lgcpy/: __init__.py  database.py  docutils.py  equationgrammar.lark  equationutils.py  gpuutils.py  test_database.py  xmlutils.py
test/: CMakeLists.txt  counter-sampler.cpp  dummy-test.cpp  main.cpp
test/hwcpipe/: counter_enumeration.cpp  gpu_instance.cpp  hwcpipe_double.cpp
test/hwcpipe/mock/: backend_manual_sampler.hpp  backend_sample.hpp  handle.hpp  instance.hpp  mock_helper.h
(+35 files in other folders)
